--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -3,9 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: auto;
+  overflow-x: hidden;
 }
 header {
-  height: 80px;
+  min-height: 80px;
   background-color: black;
   color: #fff;
   flex: 0 1 auto;
@@ -16,7 +18,7 @@ main {
 footer {
   flex: 0 1 auto;
 
-  height: 80px;
+  min-height: 80px;
   background-color: black;
   color: #fff;
   text-align: center;
