--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,18 @@
-* {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap");
 
 body {
   margin: 0;
+  font-family: "Nunito", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e6e8ec;
+  height: 100vh;
 }
 
 .main {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   text-align: center;
+  height: auto;
 }
