--- a/src/pages/modal/Modal.scss
+++ b/src/pages/modal/Modal.scss
@@ -36,7 +36,8 @@
   background-color: #fff;
   width: 70%;
   max-width: 500px;
-  max-height: 300px;
+  box-sizing: border-box;
+  height: 350px;
   padding: 40px 30px;
   border-radius: 10px;
   position: absolute;
@@ -45,10 +46,16 @@
   transform: translate(-50%, -50%);
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease-in-out;
+  @media (max-width: 540px) {
+    width: 95%;
+    padding: 35px 20px;
+  }
 
   img {
     border-radius: 5px;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   svg {
